Correct custom jobList legend spacing

--- a/src/JobList.css
+++ b/src/JobList.css
@@ -150,10 +150,28 @@
   width: 100%;
 }
 
+.job-item-main-legend p {
+  width: 25%;
+}
+
+.job-list-company-name {
+  text-align: left;
+}
+
+.job-list-status {
+  text-align: center;
+}
+
+.job-list-date-applied {
+  text-align: right;
+}
+
 .job-list-job-board {
   border: none;
   outline: none;
   font-size: 16px;
+  /* width: 32%; */
+  text-align: center;
 }
 
 .week-divider {
